<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">MyGarden</string>
    <string name="position">Position</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="firstImage">FirstImage</string>
    <string name="Login">Login</string>
    <string name="quote_flowers">“If you look the right way, you can see that the whole world is a garden.”– Frances Hodgson Burnett</string>
    <string name="allProducts">SEE WHAT WE CAN OFFER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signInText">Don\'t have an account? Sign in now</string>
    <string name="about_us">A family garden, established in 2020, we produce perennials in pots, which we ship anywhere by courier. The passion and effort put us in the top of the gardens.
After all these words of praise, we tell you from now on that: We are not perfect.
We still have a lot to learn and a lot to say to flower lovers.</string>
    <string name="products">PRODUCTS </string>
    <string name="signin"> SIGN IN </string>
    <string name="logOut"> LogOut </string>
    <string name= "phoneNumber"> Phone number</string>
    <string name= "name"> Name</string>
    <string name= "aboutUs_title"> Who are we? </string>
    <string name= "myProfile"> My Profile </string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
