<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.InGame">

    <data>

        <variable
            name="game"
            type="com.example.android.navigation.LogInFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="153dp"
                android:layout_height="150dp"
                android:layout_marginTop="36dp"
                android:src="@mipmap/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="190dp"
                android:background="@color/darkgrey"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:labelFor="@id/emailLabel"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/logIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="100dp"
                android:background="@color/black"
                android:text="@string/email"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="32dp"
                android:background="@color/black"
                android:text="@string/password"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/logIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
                app:layout_constraintVertical_bias="0.13" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@color/darkgrey"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/logIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
                app:layout_constraintVertical_bias="0.01999998" />

            <Button
                android:id="@+id/logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/darkgrey"
                android:text="@string/Login"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLabel"
                app:layout_constraintVertical_bias="0.39" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="194dp"
                android:layout_height="35dp"
                android:background="@color/black"
                android:text="@string/signInText"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/logIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.746"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>